Name: gopherbot
Version: 0.1.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2005 John Goerzen
Build-Depends: base, network, unix, parsec, MissingH>=0.11.5, HDBC-postgresql, HDBC

Executable: gopherbot
Extensions: ExistentialQuantification, AllowOverlappingInstances,
    AllowUndecidableInstances
GHC-Options: -O2 
Main-Is: gopherbot.hs

